--- a/topics/怪物图鉴/Materials/4E.css
+++ b/topics/怪物图鉴/Materials/4E.css
@@ -1,7 +1,7 @@
 body{
 	background-color:#F4F2EE;
 	font-size:16px;
-	font-family:Î¢ÈíÑÅºÚ,¿¬Ìå_GB2312,tahoma,sans_serif;
+	font-family:å¾®è½¯é›…é»‘,æ¥·ä½“_GB2312,tahoma,sans_serif;
 	line-height:1.5;
 }
 
